--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Forms</title>
+  <title>Lab 4</title>
 </head>
 
 <body>
   <header>
     <h1 id="store-heading">
-      <a href="#">Fake Store</a>
+      <a href="#">Lab 4 - Secure Headers</a>
     </h1>
   </header>
   <div id="main-menu">
